<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Main image and headings -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">

                <ImageView
                    android:id="@+id/MainImage"
                    style="@style/MainImage"
                    android:adjustViewBounds="true"
                    android:src="@drawable/hannelandia" />


                <TextView
                    android:id="@+id/hannelandia"
                    style="@style/Hannelandia"
                    android:layout_above="@id/subheading"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/subheading"
                    style="@style/Subheading"
                    android:layout_alignParentBottom="true"
                    android:text="@string/subname" />

            </RelativeLayout>

            <!-- Description and date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/Description"
                    android:text="@string/description" />

                <TextView
                    style="@style/Date"
                    android:text="@string/date" />
            </LinearLayout>

            <!-- Icons and descriptions -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">


                <TextView
                    android:id="@+id/Address.text"
                    style="@style/Address.text"
                    android:drawableLeft="@drawable/address"
                    android:drawablePadding="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/address" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">


                <TextView
                    style="@style/Price.text"
                    android:drawableLeft="@drawable/price"
                    android:drawablePadding="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/price" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <TextView
                    style="@style/Info.text"
                    android:drawableLeft="@drawable/info"
                    android:drawablePadding="@dimen/activity_horizontal_margin"
                    android:gravity="top"
                    android:text="@string/info" />
            </LinearLayout>

            <Button
                style="@style/Register"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:text="@string/register" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>